# serde-constant

./: .gitignore  COPYING.md  Cargo.toml  README.md
src/: lib.rs
