[package]
name = "serde-constant"
version = "0.1.0"
edition = "2021"
description = "Const values for serde"
readme = "README.md"
authors = ["Adam Spofford <aspofford.as@gmail.com>"]
categories = ["encoding", "no-std", "no-std::no-alloc", "rust-patterns"]
keywords = ["serde", "const", "untagged"]
homepage = "https://github.com/pie-flavor/serde-constant"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
